# articulation_learning

./: README.md  requirements.sh
config/: articulation_learning.cfg
software/: Makefile  tobuild.txt
software/drivers/kinect/: CMakeLists.txt
software/drivers/kinect/src/kinect-lcm/: CMakeLists.txt
software/drivers/kinect/src/kinect-openni-lcm/: CMakeLists.txt
software/drivers/kinect/src/kinect-utils/: CMakeLists.txt
software/modules/: CMakeLists.txt
software/modules/DBoW2/: CMakeLists.txt  dbow2_wrapper.cpp  dbow2_wrapper.hpp  demo.cpp
software/modules/DBoW2/DBoW2/: FBrief.h  FClass.h  FSurf64.h  TemplatedVocabulary.h
software/modules/DBoW2/DUtilsCV/: CvVersion.h  Drawing.cpp  Drawing.h  GUI.cpp  GUI.h  Geometry.cpp  Geometry.h  IO.cpp  IO.h  Mat.cpp  Mat.h  Transformations.cpp  Transformations.h  Types.cpp  Types.h
software/modules/DBoW2/DVision/: BRIEF.cpp  BRIEF.h  BundleCamera.cpp  BundleCamera.h  FSolver.cpp  FSolver.h  HSolver.cpp  HSolver.h  ImageFunctions.cpp  ImageFunctions.h  Matches.cpp  PMVSCamera.cpp  PMVSCamera.h  SurfSet.cpp  SurfSet.h
software/modules/articulation/: CMakeLists.txt  README
software/modules/articulation/config/: dynamic_reconfigure.cfg  wheelchair.cfg
software/modules/articulation/lcmtypes/: articulated_object_msg_t.lcm  channelfloat32_msg_t.lcm  model_msg_t.lcm  model_param_msg_t.lcm  pose_list_msg_t.lcm  pose_msg_t.lcm  track_list_msg_t.lcm  track_msg_t.lcm
software/modules/articulation/src/detector/: CMakeLists.txt  collector.py  detector.cc
software/modules/articulation/src/modeler/: CMakeLists.txt  ground_truth_generator.cc  model_learner.cc  structure_learner.cc  utils.cpp  utils.hpp
software/modules/articulation/src/modeler/models/: factory.cpp  factory.h  generic_model.cpp  generic_model.h  pca_gp_model.cpp  pca_gp_model.h  prismatic_model.cpp  prismatic_model.h  rigid_model.cpp  rigid_model.h  rotational_model.cpp  rotational_model.h
software/modules/articulation/src/modeler/structure/: ArticulatedObject.cpp  ArticulatedObject.hpp  hogman_wrapper.cpp  structs.cpp  structs.h
software/modules/articulation/src/modeler/structure/hogman_minimal/: CMakeLists.txt
software/modules/articulation/src/modeler/structure/hogman_minimal/include/hogman_minimal/graph/: posegraph.hpp
software/modules/articulation/src/modeler/structure/hogman_minimal/include/hogman_minimal/graph_optimizer_hogman/: graph_optimizer_chol.hpp
software/modules/articulation/src/renderer/: CMakeLists.txt  articulation_renderer.cc  articulation_renderer.h  main.c
software/modules/cv_utils/: CMakeLists.txt  Common.h  Distance.h  FindCameraMatrices.cpp  IFeatureMatcher.h  MultiCameraDistance.cpp  MultiCameraPnP.cpp  OFFeatureMatcher.cpp  OFFeatureMatcher.h  RichFeatureMatcher.cpp  RichFeatureMatcher.h  Triangulation.cpp  cv_utils.hpp
software/modules/features3d/: CMakeLists.txt  feature_types.cpp  feature_types.hpp  keypoint_tracker.cpp  keypoint_tracker.hpp  track_manager.cpp  track_manager.hpp
software/python/: README
software/python/apps/: articulation_learning_demo.py  kinect_image_app.py  kinect_process.py  lcmlog_app.py
software/python/apps/feature_tracking/: gpft_analysis.py  gpft_tracking.py  gpft_tracking_all.sh  offline_klt_app.py  trackers_comparison.py  trackers_comparison_all.sh
software/python/apps/kinematics/: articulation_eval.py  kdl_fkin_generator.py
software/python/tests/: isam_test.py
software/python/utils/: __init__.py  al_katz.py  al_lfd.py  articulation_analysis.py  bow_utils.py  camera_utils.py  change_detection.py  correspondence_estimation.py  data_containers.py  db_utils.py  dbg_utils.py  demo_logreader.py  dimensionality_reduction.py  distributions.py  draw_utils.py  frame_utils.py  fs_label_spreading.py  fs_spectral_embedding.py  geom_utils.py  grid_crf.py  imshow_utils.py  io_utils.py  lcm_utils.py  lcmlog-to-hdf5.py  log_utils.py  logplayer_utils.py  mser_utils.py  normal_estimation.py  opencv_video.py  optflow_utils.py  plot_utils.py  point_desc.py  pose_estimation.py  pose_estimation_eval.py  pose_pair_estimation.py  pose_utils.py  ransac.py  rigid_transform.py  slic_utils.py  tag_utils.py  (+2 more)
software/python/utils/dataset/: dataset_readers.py  dataset_writer.py
software/python/utils/image/: desc_utils.py
software/python/utils/trackers/: klt.py  lk_tracker.py  offline_klt.py  tracker_utils.py
software/pywrappers/: CMakeLists.txt  apriltags_utils.hpp  fs_apriltags.cpp  fs_articulation.cpp  fs_isam.cpp  fs_pcl_utils.cpp  fs_types.cpp  fs_types.hpp  fs_utils.cpp
software/pywrappers/cmake/: boost-python.cmake
software/pywrappers/test/: fs_utils_test.py
software/pywrappers/utils/: container.h  eigen_numpy_conversion.cpp  eigen_numpy_conversion.hpp  opencv_numpy_conversion.cpp  opencv_numpy_conversion.hpp
software/utilities/: CMakeLists.txt  README
software/utilities/fs-utils/: CMakeLists.txt  profiler.cpp  profiler.hpp  quaternion.cpp  quaternion.hpp  rigid_transform.cpp  rigid_transform.hpp  thread_safe_grabber.hpp  thread_safe_queue.hpp
software/utilities/lcm-utils/: CMakeLists.txt  README  lcm-reader-util.cpp  lcm-reader-util.hpp
software/utilities/lcm-utils/cmake/: lcmtypes.cmake  pods.cmake
software/utilities/opencv-utils/: CMakeLists.txt  calib_utils.cpp  color_utils.cpp  color_utils.hpp  imgproc_utils.cpp  imgproc_utils.hpp  imshow_utils.cpp  imshow_utils.hpp  kinect_utils.cpp  kinect_utils.hpp  math_utils.cpp  math_utils.hpp  opencv_utils.hpp  plot_utils.cpp  plot_utils.hpp
software/utilities/pcl-utils/: CMakeLists.txt  frame_utils.cpp  frame_utils.hpp  pcl_utils.cpp  pcl_utils.hpp  pose_utils.cpp  pose_utils.hpp
software/utilities/vis-utils/: CMakeLists.txt  vis_utils.cpp  vis_utils.hpp
software/viewer/src/: CMakeLists.txt  main.cpp
